--- a/paper/gpupathrender.tex
+++ b/paper/gpupathrender.tex
@@ -18,8 +18,8 @@
 %%%   numbers and anonymization of author and affiliation information.
 
 %\documentclass[review]{acmsiggraph}            % review
-\documentclass[annual]{acmsiggraph}          % preprint
-%\documentclass[reprint,pretty]{acmsiggraph}          % preprint
+%\documentclass[annual]{acmsiggraph}          % preprint
+\documentclass[reprint,pretty]{acmsiggraph}          % preprint
 
 
 %% Uncomment one of the five lines above depending on where your paper is
@@ -88,11 +88,11 @@
 \TOGnumber{6}
 \TOGarticleDOI{2366145.2366183}
 
-%\reprintyear{2012}
-%\reprintlocation{Singapore}
-%\reprintdates{November 28--December 1}
-%\reprintlogo{SA2012_white}
-%\reprintlogobefore{\hspace*{-.3in}}
+\reprintyear{2012}
+\reprintlocation{Singapore}
+\reprintdates{November 28--December 1}
+\reprintlogo{SA2012_white}
+\reprintlogobefore{\hspace*{-.3in}}
 
 \definecolor{DarkGreen}{RGB}{0,100,0}
 \newcommand{\comment}[1]{}
